--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   image_picker: ^0.6.3+1
   http: ^0.12.0+4
   modal_progress_hud: ^0.1.3
+  cloud_firestore: ^0.13.5
+  firebase_auth: ^0.16.0
 
 dev_dependencies:
   flutter_test:
